# PDFIA

./: README.md
yo/: main.py  pyproject.toml
yo/app/: __init__.py  main.py
yo/app/graph/: __init__.py  graph.py  nodes.py
yo/app/static/: style.css
yo/app/templates/: index.html  result.html
