[project]
name = "yo"
version = "0.1.0"
description = "IA Assistant con LangGraph, Flask y Groq"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.128.7",
    "flask>=3.0.0",
    "google-auth-oauthlib>=1.2.4",
    "groq>=0.9.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-community>=3.0.5",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "langserve>=0.3.3",
    "pydantic>=2.12.5",
    "reportlab>=4.0.0",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
